# multitail

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-release.yml
src/: console.c  console.h  input.c  input.h  linebuf.c  linebuf.h  main.c  pane.c  pane.h  statusbar.c  statusbar.h
